# OS6

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  build.sh  build_in_docker.sh  count_lines.sh  create_hdd.sh  desc  find_missing_headers.sh  gdbdebug  stability_test.sh
apps/: CMakeLists.txt  user_apps_c.cmake  user_apps_cxx.cmake
apps/false/: CMakeLists.txt  false.c
apps/hello_world/: CMakeLists.txt  hello_world.c
apps/hello_world_cpp/: CMakeLists.txt  hello_world.cpp
apps/true/: CMakeLists.txt  true.c
kernel/: CMakeLists.txt  boot.asm  kernel_main.c  linker.ld
kernel/include/acpi/: acpi.h  acpi_header.h  dsdt.h  fadt.h  gas.h  madt.h  rsdp.h  rsdt.h  ssdt.h  xsdt.h
kernel/include/arch/: arch.h
kernel/include/boot/: multiboot2.h
kernel/include/cmos/: cmos_rtc.h
kernel/include/crypto/: crypto.h  crypto_cipher.h  crypto_hash.h  crypto_prng.h  crypto_util.h  error.h
kernel/include/debug/: backtrace.h  debug_terminal.h
kernel/include/drivers/: blockdev.h  e1000.h  ide.h  keyboard_ps2.h  mouse_ps2.h  ramdisk.h  vbe.h
kernel/include/exec/: elf32.h  elf64.h
kernel/include/gui/: context.h  desktop.h  font.h  gui.h  gui_list.h  gui_listnode.h  list.h  listnode.h  rect.h  terminal_mode.h  window.h
kernel/include/logging/: logging.h
kernel/include/mm/: kheap.h  memory_info.h  mm_bitmap.h  phys_mem.h  virt_mem.h
kernel/include/pci/: pci.h  pci_device.h  pci_io.h
kernel/include/process/: launch_program.h  process.h
kernel/include/serial/: serial.h
kernel/include/simple_cli/: commands.h  simple_cli.h  vt_100.h
kernel/include/sync/: spinlock.h
kernel/include/syscall/: syscall.h
kernel/include/usb/: usb.h  usb_controller.h  usb_descriptors.h  usb_device.h  usb_device_request.h  usb_driver.h  usb_ehci.h  usb_hub.h  usb_keyboard.h  usb_registry.h  usb_uhci.h
kernel/include/util/: bitset.h  endian.h  hashmap.h  hexdump.h  huffman.h  json.h  link.h  list.h  mmio.h  sha512.h  tree.h  vector.h
kernel/include/vfs/: ext2.h  nulldev.h  vfs.h  zerodev.h
kernel/src/: kernel_main.c  sources.cmake
kernel/src/acpi/: acpi.c  madt.c  sources.cmake
kernel/src/arch/: arch.c  sources.cmake
kernel/src/boot/: boot.asm  sources.cmake
kernel/src/cmos/: cmos_rtc.c  sources.cmake
kernel/src/crypto/: crypto_free.c  crypto_malloc.c  crypto_util.c  crypto_zeroize.c  sources.cmake
kernel/src/debug/: backtrace.c  debug_terminal.c  sources.cmake
kernel/src/drivers/: blockdev.c  e1000.c  ide.c  keyboard.c  keyboard_ps2.c  mouse.c  mouse_ps2.c  ramdisk.c  sources.cmake  vbe.c
kernel/src/exec/: elf64.c  exec_elf.c  sources.cmake
kernel/src/gui/: context.c  desktop.c  gui.c  gui_list.c  gui_listnode.c  list.c  listnode.c  rect.c  sources.cmake  terminal_mode.c  window.c
kernel/src/logging/: logging.c  sources.cmake
kernel/src/mm/: kheap.c  mm_bitmap.c  phys_mem.c  sources.cmake  virt_mem.c
kernel/src/pci/: pci.c  pci_device.c  pci_io.c  sources.cmake
kernel/src/process/: launch_program.c  process.c  read_ip.asm  sources.cmake  switch_task.asm
kernel/src/serial/: serial.c  sources.cmake
kernel/src/simple_cli/: simple_cli.c  sources.cmake
kernel/src/sync/: sources.cmake  spinlock.c
kernel/src/syscall/: do_syscall.c  sources.cmake  syscall.c
kernel/src/test/: sources.cmake  unit_tests.c
kernel/src/usb/: sources.cmake  usb.c  usb_controller.c  usb_descriptors.c  usb_device.c  usb_driver.c  usb_ehci.c  usb_hub.c  usb_keyboard.c  usb_uhci.c
kernel/src/util/: bitset.c  endian.c  hashmap.c  hexdump.c  huffman.c  link.c  list.c  mmio.c  sha512.c  sources.cmake  tree.c  vector.c
kernel/src/vfs/: ext2.c  nulldev.c  sources.cmake  vfs.c  zerodev.c
libc/: CMakeLists.txt  linker.ld
libc/include/: _cheader.h  _mbstate_t.h  _null.h  _ptrdiff_t.h  _size_t.h  _syscall.h  _wchar_t.h  _wint_t.h  alloca.h  ctype.h  limits.h  math.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  va_list.h  wchar.h
libc/src/: _libc_init.c  _syscall.c  crt0.asm  crti.asm  crtn.asm  fini.c  init.c
libc/src/ctype/: isalnum.c  isalpha.c  isascii.c  isprint.c  isspace.c  toascii.c
libc/src/stdio/: printf.c  puts.c  vsprintf.c
libk/: CMakeLists.txt  README.md
libk/include/: __libk_common.h  __libk_symbols.h  __locale.h  _file.h  _null.h  _ptrdiff_t.h  _size_t.h  _wchar_t.h  _wint_t.h  alloca.h  assert.h  ctype.h  errno.h  fenv.h  libgen.h  limits.h  math.h  memory.h  setjmp.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  va_list.h  wchar.h  wctype.h
libsimd/: CMakeLists.txt
libsimd/include/: __mm_defines.h  emmintrin.h  immintrin.h  mm_alloc.h  mmintrin.h  pmmintrin.h  tmmintrin.h  xmmintrin.h
libsimd/src/: mm_alloc.c
libstdc++/: CMakeLists.txt  README.md
libstdc++/src/: dummy.cpp
libstdc++/test/: CMakeLists.txt  utest_main.c
libstdc++/tests/: runner.cpp
libsupc++/: CMakeLists.txt
libsupc++/include/: cxxabi.h  exception  exception.h  exception_defines.h  initializer_list  new  type_info.h  typeinfo
libsupc++/src/: array_type_info.cpp  bad_alloc.cpp  bad_array_new_length.cpp  class_type_info.cpp  cxxabi.cpp  delete_op.cpp  delete_opa.cpp  delete_opant.cpp  delete_opnt.cpp  delete_ops.cpp  delete_opsa.cpp  delete_opv.cpp  delete_opva.cpp  delete_opvant.cpp  delete_opvnt.cpp  delete_opvs.cpp  delete_opvsa.cpp  deleted_virtual.cpp  enum_type_info.cpp  exception.cpp  function_type_info.cpp  fundamental_type_info.cpp  new_handler.cpp  new_op.cpp  new_opa.cpp  new_opant.cpp  new_opnt.cpp  new_opv.cpp  new_opva.cpp  new_opvant.cpp  new_opvnt.cpp  pbase_type_info.cpp  pointer_to_member_type_info.cpp  pointer_type_info.cpp  pure_virtual.cpp  si_class_type_info.cpp  type_info.cpp
libunwind/: CMakeLists.txt
libunwind/include/: abort.h  dwarf4.h  eh_frame.h  eh_framelist.h  ia64_cxx_abi.h  misc.h  registers.h  registers_intel_x64.h
libunwind/src/: dwarf4.cpp  eh_frame.cpp  eh_framelist.cpp  ia64_cxx_abi.cpp  registers_intel_x64.asm
tests/: CMakeLists.txt
tests/driver/: jtest.c  jtest.h
tests/libstdc++/: test-type_traits.cpp
(+499 files in other folders)
