#==============================================================================
# Cmake file for compiling the OS6 operating system apps
#==============================================================================

#==============================================================================
# Flags and compiler configuration
#==============================================================================

#==============================================================================
# Path macros
#==============================================================================

#==============================================================================
# Apps
#==============================================================================

add_subdirectory(hello_world)

add_subdirectory(hello_world_cpp)

#==============================================================================
# End of file
#==============================================================================