#==============================================================================
# Cmake file for compiling the OS6 operating system apps
#==============================================================================

#==============================================================================
# Flags and compiler configuration
#==============================================================================

#==============================================================================
# Path macros
#==============================================================================

#==============================================================================
# Apps
#==============================================================================

add_subdirectory(hello_world)
add_subdirectory(hello_world_cpp)
add_subdirectory(true)
add_subdirectory(false)


#==============================================================================
# End of file
#==============================================================================
